-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 11.0.1
-
31f7ed44b (11.0), 1ca8487e9 (11.0)
When trying to install Boot2Qt content on macOS the qmake/cmake paths are formulated incorrectly and the Kit is not getting registered correctly.
The qmake path is set to:
--qmake, docker://boot2qt-imx8qm-mek:6.5.2/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/qmake
This problem is not bound to Boot2Qt version. Tried with 6.5.2 and 6.6.0 versions and both had the same issue.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-29474 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495136,4 | FilePath: Use isSameDevice | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
495439,2 | Utils: Fix for invalid docker paths from installer | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
495449,1 | SdkTool: Fix docker:// path cleaning | 11.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |